<resources>
    <string name="app_name" translatable="false">Gropal</string>
    <string name="name" translatable="false">SameCiti - Customer</string>
    <string name="currency" translatable="false">\u20B9</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="terms_conds" translatable="false">Terms &amp; Condition</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="privacy_policy_msg" translatable="false">Lorem ipsum dolor sit amet,0Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,orem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit  adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit </string>
    <string name="terms_cond_msg" translatable="false">Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit  adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit </string>
    <string name="offer" translatable="false">Offer</string>
    <string name="start_time" translatable="false">Start Time :</string>
    <string name="end_time" translatable="false">Ends in :</string>
    <string name="wallet" translatable="false">Wallet Used</string>
    <string name="coupon_used" translatable="false">Coupon Used</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_chat" translatable="false">Chat with us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Rate &amp; review us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_Register" translatable="false">Register</string>
    <string name="rewards_points" translatable="false">Rewards Points</string>
    <string name="rech_wallet" translatable="false">Recharge Wallet</string>
    <string name="continue_bt" translatable="false">Continue</string>
    <string name="wall_am" translatable="false">My Wallet Amount</string>
    <string name="et_login_phone_hint" translatable="false">Mobile Number</string>
    <string name="tv_login_email" translatable="false">Email</string>
    <string name="tv_login_password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="tv_login_note" translatable="false">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="login_register" translatable="false">Login/Register</string>
    <string name="tv_reg" translatable="false">Register</string>
    <string name="tv_reg_name_hint">Name</string>
    <string name="tv_reg_pincode">Pincode/Area Code/Zip</string>
    <string name="tv_reg_socity">Society/Flat</string>
    <string name="order_amount" translatable="false">Order Amount</string>
    <string name="btn_reg_socity_choose">Choose Society...</string>
    <string name="tv_reg_house">House Number</string>
    <string name="amount_pa" translatable="false">Amount Payable</string>
    <string name="add_del" translatable="false">Add delivery address</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Search Society...</string>
    <string name="et_sea" translatable="false">Search Society..</string>
    <string name="total" translatable="false">Total :</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Address(Required)</string>
    <string name="et_reg_address">Complete Address</string>
    <string name="use" translatable="false">Use</string>
    <string name="store" translatable="false">Store Pick Up</string>
    <string name="confirm_order" translatable="false">Confirm</string>
    <string name="pickup" translatable="false">PickUp / COD</string>
    <string name="cash" translatable="false">Cash On Delivery</string>
    <string name="tv_cart_title">Cart</string>
    <string name="debit" translatable="false">Debit / Credit Card</string>
    <string name="net" translatable="false">Net Banking</string>
    <string name="card" translatable="false">Cards</string>
    <string name="promo" translatable="false">Promo Code</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total:\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rs</string>
    <string name="coupon" translatable="false">Coupon</string>
    <string name="sure_del" translatable="false">Are you sure!
    you want to delete all cart product</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <string name="tv_del_address">Delivery Address</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue With Time</string>
    <string name="tv_del_date">Select delivery date</string>
    <string name="tv_del_time">Select delivery time</string>
    <string name="tv_del_date_time">Delivery Data/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="tv_home_cat">Products</string>
    <string name="tv_home_view">View all ></string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="tv_app_name">Wallet</string>
    <string name="tv_product_name" translatable="false">Products</string>
    <string name="selling_product" translatable="false">Top selling products</string>
    <string name="deals" translatable="false">Deals of the day</string>
    <string name="view_all" translatable="false">See all</string>
    <string name="sponsered" translatable="false">Sponsored</string>
    <string name="shop_by_category" translatable="false">Shop by Categories</string>
    <string name="shop_now" translatable="false">Shop Now</string>
    <string name="feature" translatable="false">Shop by brands</string>
    <string name="condition" translatable="false">Condition</string>
    <string name="tv_toolbar_name" translatable="false">Rewards</string>
    <string name="tv_pro_add">ADD</string>
    <string name="tv_pro_update">Update</string>
    <string name="tv_pro_price">Price per\u0020</string>
    <string name="tv_toolbar_price" translatable="false">Price :</string>
    <string name="tv_toolbar_redeem" translatable="false">Redeem</string>
    <string name="tv_out" translatable="false">Out of stock</string>
    <string name="tv_rech" translatable="false">Enter Wallet Amount</string>
    <string name="tv_rech_wall" translatable="false">Recharge</string>
    <string name="tv_mywall" translatable="false">Recharge Wallet</string>
    <string name="tv_pro_rs">\u0020Rs.\u0020</string>
    <string name="tv_pro_total">Total: </string>
    <string name="tv_conf_order_title">Payment Details</string>
    <string name="tv_order_cancle">Cancel Order</string>
    <string name="tv_order_summery">Summary</string>
    <string name="tv_order_total">Total: Rs.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="tv_order_rs">Rs.</string>
    <string name="tv_thanks_title" translatable="false">Thank you for your order.</string>
    <string name="tv_thanks_home" translatable="false">Continue home</string>
    <string name="tv_thanks_order" translatable="false">Track my order</string>
    <string name="thanks" translatable="false">Thanks Order</string>
    <string name="paytm" translatable="false">Paytm</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="my_order" translatable="false">My Order</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="delivery" translatable="false">Delivery</string>
    <string name="delivery_date" translatable="false">"Delivery Date: </string>
    <string name="please_select_date" translatable="false">Please select date</string>
    <string name="no_rcord_found" translatable="false">No record found</string>
    <string name="connection_time_out" translatable="false">Connection Time out</string>
    <string name="add_delivery_address" translatable="false">Add Delivery Address</string>
    <string name="order_now" translatable="false">Order Now</string>
    <string name="order" translatable="false">Order</string>
    <string name="reward" translatable="false">Reward</string>
    <string name="account" translatable="false">Account</string>
    <string name="search_history" translatable="false">Search history</string>
    <string name="use_current_loc" translatable="false">Use my location</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="nav_wallet" translatable="false">My wallet</string>
    <string name="nav_rewards" translatable="false">My rewards</string>
    <string name="nav_help" translatable="false">Help &amp; Support</string>
    <string name="why_us" translatable="false"><u>Why us</u></string>
    <string name="our_mission" translatable="false"><u>Our mission</u></string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="email_add" translatable="false">Email Address</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="dob" translatable="false">DoB(MM/DD/YYYY)</string>
    <string name="send_emails" translatable="false">Send me emails on promotions, offers and services</string>
    <string name="save_profile" translatable="false">Save profile</string>
    <string name="enter_card" translatable="false">Enter card details</string>
    <string name="card_no" translatable="false">Card Number</string>
    <string name="mm" translatable="false">MM</string>
    <string name="yy" translatable="false">YYYY</string>
    <string name="holder_name" translatable="false">Cardholder\'s name</string>
    <string name="card_label" translatable="false">Card Label(optional)</string>
    <string name="save" translatable="false">Save</string>
</resources>