<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/iv_contact"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/about_us"
            android:background="@color/green"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_us"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/slate_gray"
            android:fontFamily="sans-serif"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp">
        </TextView>


        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_cond_msg"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_normal">
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_mission"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/slate_gray"
            android:fontFamily="sans-serif"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp">
        </TextView>


        <TextView
            android:id="@+id/tv_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_msg"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_normal">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>