<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/term_cond"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conds"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_large">
            </TextView>


            <Fonts.LatoBLack
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_cond_msg"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_normal">
            </Fonts.LatoBLack>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_large">
            </TextView>


            <Fonts.LatoBLack
                android:id="@+id/tv_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_msg"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_normal">
            </Fonts.LatoBLack>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

</ScrollView>