<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    >

<RelativeLayout
    android:id="@+id/rl_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cardElevation="@dimen/space_5"
        android:layout_marginTop="10dp"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

    <Fonts.LatoBLack
        android:id="@+id/loc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/use_current_loc"
        />
    </androidx.cardview.widget.CardView>

    <Fonts.LatoBLack
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/card_view"
        android:layout_alignParentLeft="true"
        android:text="@string/search_history"
        />

    <Fonts.LatoBLack
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/card_view"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/clear"
        />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history"
        app:cardElevation="@dimen/space_5"
        android:layout_marginTop="15dp"
>

    <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </androidx.cardview.widget.CardView>

</RelativeLayout>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </androidx.cardview.widget.CardView>


</RelativeLayout>